# biomolecular_tools

./: install.md  pyproject.toml
requirements_python/: bioinformatics.txt  composite_data_type.txt  input_output.txt  molecular_modelling.txt  programming.txt  requirements.txt  scientific_computing.txt
requirements_python/conda/: molecular_modelling.txt
src/biomolecular_tools/: __init__.py  amino_acids.py  cif_pdb_fixing.py  frame_from_traj.py  sequence_extraction.py
src/molecular_modelling_tools/: mdanalysis_tools.py  parmed_tools.py
