[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biomolecular_tools"
version = "0.1.0"
license = {text = "MIT"}
dependencies = [
    "biotite",
    "mdanalysis",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
