[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biomolecular_tools"
version = "0.1.0"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
bio = [
    "biotite",
]
all = [
    "bidict",
    "biotite",
    "mdanalysis",
]

[tool.hatch.build.targets.wheel]
packages = ["src/biomolecular_tools"]
